[package]
name = "pyquorum_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "pyquorum_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.3", features = ["extension-module", "abi3-py39"] }
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
strip = true 